fix error flicker when hover

--- a/css/index.css
+++ b/css/index.css
@@ -114,17 +114,6 @@ body {
   display: block;
 }
 
-.overlay {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  z-index: 10;
-}
-
 .group_category {
   height: 100%;
   width: 80%;
